Add route to get user categories
