# src/models/category.ts
@@ -23,8 +23,9 @@ export interface CreateManyInput {
 	}>;
 }
 
-export interface GetAllByUserInput {
+export interface GetByUserInput extends PaginatedRepository {
 	accountId: string;
+	onlyActive?: boolean;
 }
 
 export abstract class CategoryRepository {
@@ -32,7 +33,7 @@ export abstract class CategoryRepository {
 
 	abstract createMany(i: CreateManyInput): Promise<void>;
 
-	abstract getAllByUser(i: GetAllByUserInput): Promise<Array<Category>>;
+	abstract getByUser(i: GetByUserInput): Promise<Array<Category>>;
 }
 
 /**
@@ -43,8 +44,17 @@ export abstract class CategoryRepository {
  *
  */
 
+export interface GetCategoriesByUserInput extends Paginated {
+	accountId: string;
+	onlyActive?: boolean;
+}
+
 export abstract class CategoryUseCase {
 	abstract getDefault(i: Paginated): Promise<PaginatedItems<DefaultCategory>>;
 
 	abstract createMany(i: CreateManyInput): Promise<void>;
+
+	abstract getByUser(
+		i: GetCategoriesByUserInput,
+	): Promise<PaginatedItems<Category>>;
 }
